# WiringPi-Java

./: README.md  pom.xml
.github/workflows/: maven-ci.yml  maven-deploy.yml  maven.yml
WiringPi-Java/: pom.xml
WiringPi-Java-Demo/src/main/java/com/wiringpi/demo/: WiringPiJavaDemoApplication.java
WiringPi-Java/jni/: CMakeLists.txt  run.sh
WiringPi-Java/jni/lib/: CMakeLists.txt  Callback.h  com_wiringpi_jni_SoftPwm.cpp  com_wiringpi_jni_SoftPwm.h  com_wiringpi_jni_SoftTone.cpp  com_wiringpi_jni_WiringPiI2C.h  com_wiringpi_jni_WiringPiSetup.cpp  com_wiringpi_jni_WiringPiSetup.h
WiringPi-Java/src/main/java/com/wiringpi/gpio/: IPwm.java  ISoftPwm.java  Pwm.java
WiringPi-Java/src/main/java/com/wiringpi/jni/: Callback.java  SoftTone.java  WiringPiI2C.java
WiringPi-Java/src/main/java/com/wiringpi/pin/: BcmPin.java  IPin.java  NamePin.java  PhysPin.java
WiringPi-Java/src/main/java/com/wiringpi/utils/: LibraryUtils.java
WiringPi-Java/src/test/java/com/wiringpi/gpio/: PwmTest.java
WiringPi-Java/src/test/java/com/wiringpi/pin/: GpioTest.java  IGpioTest.java
demo-front/: package.json
demo-front/config/: config.ts
demo-front/src/pages/Airplane/FlightControl/: data.ts  index.tsx
demo-front/src/pages/Airplane/FlightControl/ConnectBox/: data.ts  index.tsx
demo-front/src/pages/Airplane/FlightControl/ControlBox/: data.ts  index.tsx
demo-front/src/pages/Airplane/FlightControl/PowerBox/: data.ts  index.tsx
jni/demo/: diantiao.cpp  diantiao.h  jidianqi.cpp
jni/lib/: Callback.cpp  com_wiringpi_jni_SoftTone.h  com_wiringpi_jni_TestNative.cpp  com_wiringpi_jni_TestNative.h  com_wiringpi_jni_WiringPi.cpp  com_wiringpi_jni_WiringPi.h  com_wiringpi_jni_WiringPiI2C.cpp  utils.cpp  utils.h
src/main/java/com/wiringpi/gpio/: Gpio.java  IGpio.java  ISoftTone.java
src/main/java/com/wiringpi/jni/: SoftPwm.java  TestNative.java  WiringPi.java  WiringPiI2C.java  WiringPiSetup.java
src/main/java/com/wiringpi/jni/modes/: InterruptLevels.java  PiMakers.java  PinModes.java  PudModes.java  PwmModes.java  WpiModes.java
src/main/java/com/wiringpi/pin/: WiringPiPin.java
src/main/java/com/wiringpi/pin/modes/: PiMaker.java  PiModel.java  PinValue.java  PudMode.java  PwmMode.java  WpiMode.java
src/main/java/com/wiringpi/utils/: FileUtils.java
src/test/java/com/wiringpi/jni/: WiringPiSetupTest.java
(+11 files in other folders)
